MDEV-12607 Hybrid functions create wrong VARBINARY length when mixing character and binary data